<resources>
    <string name="app_name">Artemify</string>
    <string name="welcome_to_artemify_music_studio">Welcome to Artemify Music Studio!</string>
    <string name="your_creations_today_will_be_the_greatest_works_of_art_tomorrow">Your creations today will be the greatest works of art tomorrow</string>
    <string name="start">Start</string>
    <string name="populate_entities">Populate Entities</string>
    <string name="log_in">LOG IN</string>
    <string name="join">JOIN</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="regular_user">Regular User</string>
    <string name="admin_user">Admin User</string>
    <string name="login_as">Login as:</string>
    <string name="password">PASSWORD</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">USERNAME</string>
    <string name="create_account">Create New Account</string>
    <string name="app_logo">APP LOGO</string>
    <string name="search">Search</string>
    <string name="exit">exit</string>
    <string name="view_followers">Followers</string>
    <string name="view_followings">Following</string>
    <string name="view_login_history">Login History</string>
    <string name="view_user_songs">Public Songs</string>
    <string name="view_private_songs">Private Songs</string>
    <string name="view_user_playlists">Public Playlists</string>
    <string name="view_private_playlists">Private Playlists</string>
    <string name="view_user_favorites">Favorite Songs</string>
    <string name="view_user_liked_playlists">Liked Playlists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="quit_admin_mode">Quit admin mode</string>
    <string name="manage_users">Manage Users</string>
    <string name="delete_a_user">Delete a user</string>
    <string name="ban_a_user">Ban a user</string>
    <string name="unban_a_user">Unban a user</string>
    <string name="make_a_user_an_admin">Make a user an admin</string>
    <string name="home_search">Search</string>
    <string name="profile_and_setting">Profile and Setting</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="upload_song">Upload Song</string>
    <string name="enable_admin_mode">Enable Admin Mode</string>
    <string name="home_log_out">Log Out</string>
    <string name="view_queue">View Queue</string>
    <string name="welcome_username">"Welcome, "</string>
    <string name="admin_page">Admin Page</string>
    <string name="admin_welcome_username">"Welcome, "</string>
    <string name="home">Home</string>
    <string name="enter_the_require_info">Enter the require Info</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="likes">Likes</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="liked_playlists">Liked Playlists</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="cover">cover</string>
    <string name="play_playlist">Play Playlist</string>
    <string name="creator_info">Creator Info</string>
    <string name="playlist_description">Playlist Description</string>
    <string name="private_public">private/public</string>
    <string name="view_playlist_songs">View Playlist Songs</string>
    <string name="view_creator">View Creator</string>
    <string name="favourite_songs">Favourite Songs</string>
    <string name="userlogo">userlogo</string>
    <string name="my_songs">My Songs</string>
    <string name="song_logo">song_logo</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="private_songs">Private Songs</string>
    <string name="private_playlists">Private Playlists</string>
    <string name="login_history">View Login History</string>
    <string name="ok_login_history">OK</string>
    <string name="public_playlist">Public Playlist</string>
    <string name="private_playlist">Private Playlist</string>
    <string name="list_of_playlists">List of Playlists</string>
    <string name="log_in_page">Log In</string>
    <string name="exit_view_queue">exit</string>
    <string name="playlist_name_view_queue">Playlist Name</string>
    <string name="cat_logo">cat logo</string>
    <string name="first_time_initialization">First Time Initialization</string>
    <string name="shuffle_queue">Shuffle Queue</string>
    <string name="view_queue_queue_display">View Queue</string>
    <string name="skip_song">Skip Song</string>
    <string name="play_previous_song">Play Previous Song</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="repeat_song_once">Repeat Song Once</string>
    <string name="repeat_song_infinitely">Repeat Song Infinitely</string>
    <string name="search_by_user">Search by User</string>
    <string name="search_by_song">Search by Song</string>
    <string name="search_by_playlist">Search by Playlist</string>
    <string name="exit_song_display">Exit</string>
    <string name="like_song_button">like song button</string>
    <string name="listen_song_button">listen song button</string>
    <string name="song_name_display">song name</string>
    <string name="artist">artist</string>
    <string name="like_song">like song</string>
    <string name="song_likes">likes</string>
    <string name="listen_song">listen song</string>
    <string name="song_listens">listens</string>
    <string name="public_private_song">visibility of song</string>
    <string name="duration">duration</string>
    <string name="view_lyrics">View Lyrics</string>
    <string name="view_creator_song_display">View Creator</string>
    <string name="add_to_existing_playlist">Add To Existing Playlist</string>
    <string name="add_to_new_playlist">Add To New Playlist</string>
    <string name="play_song">Play Song</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="exit_upload_song">Exit</string>
    <string name="enter_song_name">Enter your new song name</string>
    <string name="upload_song_cover">upload song cover</string>
    <string name="song_name">song name</string>
    <string name="enter_duration">Enter your new song duration</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="enter_lyrics">Enter your lyrics</string>
    <string name="lyrics">lyrics</string>
    <string name="choose_public">Public</string>
    <string name="choose_private">Private</string>
    <string name="create_song">Create</string>
    <string name="playlist_cover">playlist cover</string>
    <string name="enter_playlist_name">Enter your new playlist name</string>
    <string name="new_playlist_name">playlist name</string>
    <string name="enter_description">Enter your description</string>
    <string name="description">description</string>
    <string name="playlist_public">Public</string>
    <string name="playlist_private">Private</string>
    <string name="create_playlist">Create</string>
    <string name="song_cover1">cover</string>
    <string name="song_name1">Song Name</string>
    <string name="artist_name1">Artist Name</string>
    <string name="artist_name2">Artist Name</string>
    <string name="artist_name3">Artist Name</string>
    <string name="artist_name4">Artist Name</string>
    <string name="artist_name5">Artist Name</string>
    <string name="artist_name6">Artist Name</string>
    <string name="song_cover2">cover</string>
    <string name="song_cover3">cover</string>
    <string name="song_cover4">cover\\</string>
    <string name="song_cover5">cover</string>
    <string name="song_cover6">cover</string>
    <string name="song_name2">Song Name</string>
    <string name="song_name3">Song Name</string>
    <string name="song_name4">Song Name</string>
    <string name="song_name5">Song Name</string>
    <string name="song_name6">Song Name</string>
    <string name="song_cover">cover</string>
    <string name="song_name_for_one">Song Name</string>
    <string name="artist_name">Artist Name</string>

</resources>