<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadSongPage"
    android:orientation="vertical">

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_upload_song"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/input_song_cover"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/music_note"
            android:contentDescription="@string/upload_song_cover"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_song_name"/>

        <EditText
            android:id="@+id/upload_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:hint="@string/song_name"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill,TextContrastCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_duration"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/min"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:hint="@string/minute"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                tools:ignore="Autofill,TextContrastCheck"/>

            <EditText
                android:id="@+id/sec"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:hint="@string/second"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                tools:ignore="Autofill,TextContrastCheck"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_lyrics"/>

        <EditText
            android:id="@+id/lyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:hint="@string/lyrics"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"
            tools:ignore="Autofill,TextContrastCheck"/>

        <RadioGroup
            android:id="@+id/radioGroup_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radio_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:text="@string/choose_public" />
            <RadioButton
                android:id="@+id/radio_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/choose_private" />
        </RadioGroup>



        <Button
            android:id="@+id/create_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_song" />

    </LinearLayout>

</LinearLayout>