<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueueDisplayPage"
    android:padding="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="4dp">

        <Button
            android:id="@+id/view_queue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_queue_queue_display"
            android:drawableLeft="@drawable/music"
            tools:ignore="TextContrastCheck,RtlHardcoded" />


        <Button
            android:id="@+id/shuffle_queue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shuffle_queue"
            android:drawableLeft="@drawable/shuffle"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/skip_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_song"
            android:drawableLeft="@drawable/skip_next"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/play_previous_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_previous_song"
            android:drawableLeft="@drawable/skip_previous"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/remove_from_queue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_from_queue"
            android:drawableLeft="@drawable/remove"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/repeat_song_once"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_song_once"
            android:drawableLeft="@drawable/repeat_once"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/repeat_song_infinitely"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_song_infinitely"
            android:drawableLeft="@drawable/infinity"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

    </LinearLayout>

</LinearLayout>