<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AdminPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_page"
        android:textSize="25sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/admin_welcome_username"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:layout_margin="3dp" >

            <Button
                android:id="@+id/exitAdminMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableLeft="@drawable/regular_user_logo"
                android:text="@string/quit_admin_mode"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck,RtlHardcoded" />

            <Button
                android:id="@+id/adminLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableLeft="@drawable/logout"
                android:text="@string/log_out"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck,RtlHardcoded" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text= "@string/manage_users"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/deleteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/delete_user"
            android:text="@string/delete_a_user"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/banUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ban_user"
            android:text="@string/ban_a_user"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/unbanUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/unban_user"
            android:text="@string/unban_a_user"
            tools:ignore="TextContrastCheck,RtlHardcoded" />

        <Button
            android:id="@+id/MakeAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/make_admin"
            android:text="@string/make_a_user_an_admin"
            tools:ignore="RtlHardcoded,TextContrastCheck" />

    </LinearLayout>

</LinearLayout>